--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [i686, x86_64, arm, armhf, aarch64]
     steps:
 
     - name: Set up Go 1.x
@@ -30,7 +33,10 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./...
+      run: |
+        go build -v ./...
+        ls
+        file supervisord || echo 'check output'
 
     - name: Test
       run: go test -v ./...
