--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - github-action
   pull_request:
     branches: [ master ]
 
