--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         go generate
         go build -tags release -a -ldflags "-linkmode external -extldflags -static" -o supervisord
-        file supervisord && supervisord -h
+        file supervisord && ./supervisord -h
         mv supervisord supervisord-${{ matrix.target }}
 
     - name: Uplaod
